{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 373,
  "lineage": "4d570dfc-c7a8-1d6e-44ed-f6b5ca390bde",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-20T13:45:20.012-08:00",
            "description": "API Backend for ait-instance",
            "enable_cdn": false,
            "fingerprint": "08OB3J9Xbv4=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/healthChecks/ait-instance-hc"
            ],
            "id": "projects/my-project-6008-302417/global/backendServices/ait-instance-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ait-instance-api",
            "port_name": "http",
            "project": "my-project-6008-302417",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/backendServices/ait-instance-api",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.api",
            "google_compute_instance_template.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-20T13:44:40.137-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-6008-302417/global/firewalls/ait-instance-fw",
            "log_config": [],
            "name": "ait-instance-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/networks/default",
            "priority": 1000,
            "project": "my-project-6008-302417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/firewalls/ait-instance-fw",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "http-server"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-20T13:45:32.675-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/backendBuckets/ait-instance-backend-bucket",
            "default_url_redirect": [],
            "description": "URL map for ait-instance",
            "fingerprint": "vyLrsSqdC8Q=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all"
              }
            ],
            "id": "projects/my-project-6008-302417/global/urlMaps/ait-instance-url-map",
            "map_id": 3704060274070535187,
            "name": "ait-instance-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/backendBuckets/ait-instance-backend-bucket",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "all",
                "path_rule": [
                  {
                    "paths": [
                      "/api",
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/backendServices/ait-instance-api",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "my-project-6008-302417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/urlMaps/ait-instance-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.api",
            "google_compute_instance_template.api",
            "google_storage_bucket.static"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.98.73.60",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-02-20T13:44:40.218-08:00",
            "id": "projects/my-project-6008-302417/global/addresses/ait-instance-address",
            "name": "ait-instance-address",
            "prefix_length": 0,
            "project": "my-project-6008-302417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/addresses/ait-instance-address"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/my-project-6008-302417/global/forwardingRules/ait-instance-http-rule",
            "ip_address": "34.98.73.60",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ait-instance-http-rule",
            "port_range": "80-80",
            "project": "my-project-6008-302417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/forwardingRules/ait-instance-http-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/my-project-6008-302417/global/targetHttpProxies/ait-instance-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.api",
            "google_compute_instance_template.api",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static",
            "module.lb.google_compute_global_address.default",
            "module.lb.google_compute_target_http_proxy.http"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-20T13:45:45.138-08:00",
            "id": "projects/my-project-6008-302417/global/targetHttpProxies/ait-instance-http-proxy",
            "name": "ait-instance-http-proxy",
            "project": "my-project-6008-302417",
            "proxy_id": 505163048552250854,
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/targetHttpProxies/ait-instance-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/my-project-6008-302417/global/urlMaps/ait-instance-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.api",
            "google_compute_instance_template.api",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static"
          ]
        }
      ]
    }
  ]
}